--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 
 <body>
     <section class="overall-section">
+
+        <!-------------------------------------- header ------------------------------------->
+
         <header class="header-detail">
             <div class="header-text">
                 <h1 class="header-title">The Greatest show on the earth</h1>
@@ -32,19 +35,24 @@
                 <img src="assets/Banner Image.png" alt="">
             </div>
         </header>
+
         <!--------------------------------------- main section  ------------------------------------>
+
         <main class="bolg-section">
             <div class="options">
                 <div class="option">
-                    <a href="">Matchs</a>
+                    <a target="_blank" href="match.html">Matchs</a>
                 </div>
                 <div class="option">
-                    <a id="all-group" href="">All Group</a>
+                    <a id="all-group" target="_blank" href="team.html">All Group</a>
                 </div>
                 <div class="option ">
-                    <a id="blog-btn" href="">Blog</a>
+                    <a id="blog-btn" target="_blank" href="index.html">Blog</a>
                 </div>
             </div>
+
+            <!--------------------------------Blogs----------------------------------------------->
+
             <div class="blogs">
                 <articel class="blog">
                     <div class="blog-image">
@@ -150,7 +158,7 @@
                         </div>
                     </div>
                 </articel>
-                <articel class="blog">
+                <articel class="blog" id="last-blog">
                     <div class="blog-image">
                         <img src="assets/Blog Image.png" alt="">
                     </div>
@@ -163,11 +171,17 @@
                         </div>
                     </div>
                 </articel>
+
             </div>
 
         </main>
-
     </section>
+    <section>
+        <div class="view-btn"><a class="button" href="">View All <i class="fa-solid fa-angle-right"></i></a></div>
+    </section>
+
+
+    <!--------------------------------- footer  -------------------------------->
 
     <footer>
         <h1 class="footer-header">Goal</h1>
